# git-sync-guardian

./: .gitignore  .gsg.toml.example  LICENSE  README.md  RECOVERY.md  pyproject.toml
.github/workflows/: ci.yml
gsg/: __init__.py  cli.py  gitio.py  guard.py  inventory.py  policy.py  recovery.py  report.py  snapshot.py  sync.py
tests/: conftest.py  test_cli.py  test_guard.py  test_policy.py  test_snapshot.py
